downgraded polymer to 1.5

--- a/css/px-clipboard-sketch.css
+++ b/css/px-clipboard-sketch.css
@@ -563,6 +563,10 @@ a {
 :host {
   cursor: pointer; }
 
+.iron {
+  height: 1.6rem;
+  width: 1.6rem; }
+
 /*------------------------------------*    #CLEARFIX
 \*------------------------------------*/
 /**
