--- a/css/px-clipboard.css
+++ b/css/px-clipboard.css
@@ -576,6 +576,10 @@ a {
 :host {
   cursor: pointer; }
 
+.iron {
+  height: 1.6rem;
+  width: 1.6rem; }
+
 /*------------------------------------*    #CLEARFIX
 \*------------------------------------*/
 /**
