added a green checkmark icon and transition to the clipboard click.

--- a/sass/px-clipboard-sketch.scss
+++ b/sass/px-clipboard-sketch.scss
@@ -43,7 +43,31 @@ Predix branding rules go in px-clipboard-predix.scss, not in this file.
  .iron {
    height: calculateRem(24px);
    width: calculateRem(24px);
+   color: $black;
+
+   &.copiedIconGreen {
+     color: $dv-dark-green;
+   }
+
  }
+.fadeOutCopied {
+
+  -webkit-transition: opacity 3s 2s;
+  -moz-transition: opacity 3s 2s;
+  -ms-transition: opacity 3s 2s;
+  -o-transition: opacity 3s 2s;
+  opacity: 0;
+
+
+}
+.fadeIn {
+  -webkit-transition: opacity 3s;
+  -moz-transition: opacity 3s;
+  -ms-transition: opacity 3s;
+  -o-transition: opacity 3s;
+  opacity: 1;
+}
+
 // Trumps
 @import "inuit-clearfix/_trumps.clearfix.scss";
 @import "px-spacing-responsive-design/_trumps.spacing-responsive.scss";
