--- a/css/px-clipboard-demo.css
+++ b/css/px-clipboard-demo.css
@@ -10,7 +10,7 @@
  */
 /*
 THIS FILE SHOULD CONTAIN ONLY ABSTRACT/'SKETCH' THEME RULES, NOT SPECIFIC TO PREDIX BRANDING
-Predix branding rules go in px-rangepicker-predix.scss, not in this file.
+Predix branding rules go in px-clipboard.scss, not in this file.
 */
 /*------------------------------------*    #PX-COLORS-DESIGN
 \*------------------------------------*/
@@ -1081,18 +1081,21 @@ textarea {
   background: #f7f7fc;
   width: 100%; }
 
+.description-text {
+  max-width: 46.6666666667rem; }
+
 .properties {
-  -ms-flex-preferred-size: 16.6666666667rem;
-      flex-basis: 16.6666666667rem;
+  -ms-flex: 0 0 16.6666666667rem;
+      flex: 0 0 16.6666666667rem;
   background: white;
   border: 1px solid #d1d0d8;
   overflow-x: hidden;
   overflow-y: auto;
-  max-height: 39.3333333333rem; }
+  margin-right: 1.3333333333rem; }
 
 .demoContainer {
-  -ms-flex: 1 1;
-      flex: 1 1; }
+  -ms-flex: 1 1 auto;
+      flex: 1 1 auto; }
 
 .demoSnippet {
   -ms-flex-preferred-size: 10rem;
@@ -1109,7 +1112,8 @@ textarea {
   -ms-flex-preferred-size: 26.6666666667rem;
       flex-basis: 26.6666666667rem;
   background: white;
-  border: 1px solid #d1d0d8; }
+  border: 1px solid #d1d0d8;
+  overflow: auto; }
 
 .componentList a {
   color: #2886af; }
@@ -1121,20 +1125,16 @@ textarea {
   margin-left: 0; }
 
 .api {
-  width: 100%;
+  width: 80%;
   margin: 0 auto;
   max-width: 80rem; }
 
 .apiContainer {
   margin: 0 auto;
-  background-color: white;
-  width: 80%; }
+  background-color: white; }
 
 .tabContainer {
-  -ms-flex: 0 0 100%;
-      flex: 0 0 100%;
-  height: 4rem;
-  margin-top: 2.3333333333rem;
+  height: auto;
   background: #f7f7fc; }
 
 .footer {
@@ -1169,8 +1169,8 @@ textarea {
   .mega-demo {
     -ms-flex-direction: column;
         flex-direction: column; }
-  .demoContainer {
-    margin-left: 2rem; }
+  .properties {
+    margin-right: 0px; }
   .footer__container {
     -ms-flex-direction: column;
         flex-direction: column; }
