--- a/sass/px-clipboard-predix.scss
+++ b/sass/px-clipboard-predix.scss
@@ -23,3 +23,17 @@ common/abstract rules go in px-clipboard-sketch.scss, not in this file.
 @import "px-colors-design/_settings.colors.scss";
 
 @import 'px-clipboard-sketch.scss';
+
+
+.iron {
+  color: $gray8;
+  &:hover{
+    color: $primary-blue;
+  }
+  &:active {
+    color: $primary-blue-pressed;
+  }
+  &.copiedIconGreen {
+   color: $dv-basic-green;
+  }
+}
