--- a/sass/px-clipboard-predix.scss
+++ b/sass/px-clipboard-predix.scss
@@ -26,14 +26,14 @@ common/abstract rules go in px-clipboard-sketch.scss, not in this file.
 
 
 .iron {
-  color: $gray8;
+  color: var(--px-clipboard-icon-color, $gray8);
   &:hover{
-    color: $primary-blue;
+    color: var(--px-clipboard-icon-hover-color, $primary-blue);
   }
   &:active {
-    color: $primary-blue-pressed;
+    color: var(--px-clipboard-icon-pressed-color, $primary-blue-pressed);
   }
   &.copiedIconGreen {
-   color: $dv-basic-green;
+   color: var(--px-clipboard-icon-copied-color, $dv-basic-green);
   }
 }
