--- a/sass/px-clipboard-predix.scss
+++ b/sass/px-clipboard-predix.scss
@@ -26,7 +26,7 @@ common/abstract rules go in px-clipboard-sketch.scss, not in this file.
 
 
 .iron {
-  color: var(--px-clipboard-icon-color, $gray8);
+  color: var(--px-clipboard-icon-color, $gray13);
   &:hover{
     color: var(--px-clipboard-icon-color--hover, $primary-default);
   }
@@ -34,6 +34,6 @@ common/abstract rules go in px-clipboard-sketch.scss, not in this file.
     color: var(--px-clipboard-icon-color--pressed, $primary-pressed);
   }
   &.copiedIconGreen {
-   color: var(--px-clipboard-icon-color--copied, $green5);
+   color: var(--px-clipboard-icon-color--copied, $status-green3);
   }
 }
