--- a/sass/px-clipboard.scss
+++ b/sass/px-clipboard.scss
@@ -20,16 +20,15 @@ common/abstract rules go in px-clipboard-sketch.scss, not in this file.
 */
 
 // Settings
+@import "px-defaults-design/_settings.defaults.scss";
 @import "px-colors-design/_settings.colors.scss";
 
 // Generic
 @import "px-normalize-design/_generic.normalize.scss";
 @import "px-box-sizing-design/_generic.box-sizing.scss";
-@import "px-helpers-design/_generic.helpers.scss";
 
 // Base
 @import "px-flexbox-design/_base.flexbox.scss";
-@import "px-viewport-design/_base.viewport.scss";
 
 // Component
 .iron {
@@ -37,15 +36,15 @@ common/abstract rules go in px-clipboard-sketch.scss, not in this file.
   height: calculateRem(24px);
   width: calculateRem(24px);
   margin-left: 5px;
-  color: var(--px-clipboard-icon-color, $gray15);
+  color: var(--px-clipboard-icon-color, #000);
   &:hover{
-    color: var(--px-clipboard-icon-color--hover, $primary-default);
+    color: var(--px-clipboard-icon-color--hover, blue);
   }
   &:active {
-    color: var(--px-clipboard-icon-color--pressed, $primary-pressed);
+    color: var(--px-clipboard-icon-color--pressed, darkblue);
   }
   &.copiedIconGreen {
-   color: var(--px-clipboard-icon-color--copied, $status-green3);
+   color: var(--px-clipboard-icon-color--copied, green);
   }
 }
 .fadeOutCopied {
@@ -58,5 +57,4 @@ common/abstract rules go in px-clipboard-sketch.scss, not in this file.
 }
 
 // Trumps
-@import "px-spacing-responsive-design/_trumps.spacing-responsive.scss";
-@import "px-widths-responsive-design/_trumps.widths-responsive.scss";
+
